# ebook_to_audio

./: Makefile  README.md  chapter.html  pyproject.toml
src/: app.py  book.py  ebook.py  tts.py
tests/: test_ebook.py
tests/resources/: pg1661.epub
