[tool.poetry]
name = "ebook_to_audio"
version = "0.1.0"
description = "Application to transform an ebook into audio"
authors = ["Lucas Bataglião <lucas@batagliao.com>"]

[tool.poetry.dependencies]
python = "^3.10"
EbookLib = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
